# media-api

./: .gitignore  Cargo.toml
java/: pom.xml
java/src/main/java/com/minearchive/: Main.java  WinAPI.java
java/src/main/java/com/minearchive/struct/: PlaybackInfo.java  PlaybackState.java
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
