[package]
name = "winAPI"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
j4rs = "0.17.2"
j4rs_derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "0.54.0"
features = [
    "Foundation",
    "Media_Control"
]