[package]
name = "winAPI"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
serde_json = "1.0"
tokio = "1.38.0"

[dependencies.windows]
version = "0.58.0"
features = ["Foundation", "Media_Control", "Storage_Streams"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]